--- a/Style.css
+++ b/Style.css
@@ -1,11 +1,13 @@
 body {
-    background-color: rgb(109, 197, 114);
-  }
+    font-size: 16px;
+    color: rgb(238, 31, 31);
+    background-color: #61122f;
+}
 h1 {
     color: rgb(250, 0, 0);
     text-align: center;
-  }
+}
 p {
     color: red;
     text-align: center;
-  }
+}
