--- a/Style.css
+++ b/Style.css
@@ -1,13 +1,12 @@
 body {
     font-size: 16px;
-    color: rgb(238, 31, 31);
-    background-color: #61122f;
+    color: rgb(46, 190, 46);
+    background-color: #301fc7;
 }
 h1 {
     color: rgb(250, 0, 0);
     text-align: center;
 }
 p {
-    color: red;
-    text-align: center;
+    color: rgb(229, 255, 0);
 }
